--- a/C3P_Services_May_Rel_2020/pom.xml
+++ b/C3P_Services_May_Rel_2020/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<wildfly_home>D:\Software\latest_camunda_5_Dec\camunda-bpm-wildfly-7.6.0</wildfly_home>
+		<wildfly_home>/home/ubuntu/wildfly_server/server/wildfly-8.2.1.Final</wildfly_home>
 		<resteasy.version>3.1.3.Final</resteasy.version>
 		<maven.test.skip>true</maven.test.skip>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -34,7 +34,12 @@
 			<scope>provided</scope>
 		</dependency>
 
-
+        <dependency>
+    	<groupId>com.hubspot.jinjava</groupId>
+    	<artifactId>jinjava</artifactId>
+    	<version>2.4.3</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.glassfish.jersey.core</groupId>
 			<artifactId>jersey-client</artifactId>
@@ -170,7 +175,7 @@
 				<version>2.3</version><!--$NO-MVN-MAN-VER$ -->
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
-					<outputDirectory>${wildfly_home}\server\wildfly-8.2.1.Final\standalone\deployments</outputDirectory>
+					<outputDirectory>${wildfly_home}/standalone/deployments</outputDirectory>
 				</configuration>
 			</plugin>
 	
