--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.mvc.view.suffix: .jsp
 server.port: 8024
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/requestinfo?zeroDateTimeBehavior=convertToNull
-spring.datasource.username=root1234
-spring.datasource.password=root1234
+spring.datasource.url=jdbc:mysql://tool-mysql-35913-development:3306/requestinfo?zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
