--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=platfrm_ip-c3p-000000000035913
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src/main/java
+sonar.sources=src/main/
 #sonar.exclusions=gradle/**/*
 
 #sonar.libraries=build/libs/*.jar
