--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectVersion=1.0
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src/main/
 #sonar.exclusions=gradle/**/*
-
+sonar.java.binaries =src/main/
 #sonar.libraries=build/libs/*.jar
 
 # Language
@@ -28,3 +28,4 @@ sonar.java.target=1.8
 #--------Default database
 #sonar.jdbc.url=''
 sonar.jdbc.driver=com.mysql.jdbc.Driver
+
