--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,9 +4,9 @@ sonar.projectName=platfrm_ip-c3p-000000000035913
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src/main/
+sonar.sources=src/main/java
 #sonar.exclusions=gradle/**/*
-sonar.java.binaries =src/main/
+sonar.java.binaries =src/main/java
 #sonar.libraries=build/libs/*.jar
 
 # Language
