--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -2,23 +2,23 @@ webServiceURI=http://localhost:8080
 allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
 saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
-responseDownloadPath=D:\\configuration_files\\Configuration_File
-analyserPath=D:\\configuration_files\\Analyser
-responselogpath=D:\\configuration_files\\logs
-templateCreationPath=D:\\configuration_files\\Templates
-newtemplateCreationPath=D:\\configuration_files\\newTemplates
-exportDownloadPath=D:\\configuration_files\\RequestExport
-importFilePath=D:/configuration_files/Imported/
-responseDownloadPathHealthCheckFolder=D:\\configuration_files\\HealthCheckReports
-responseDownloadPathVersion=D:\\configuration_files\\VersionInformation
-configurationFilesXML=D:\\configuration_files\\configRouters.xml
-VnfConfigCreationPath=D:\\configuration_files\\Vnf_Configuration_Files
+responseDownloadPath=/home/configuration_files/Configuration_File
+analyserPath=/home/configuration_files/Analyser
+responselogpath=/home/configuration_files/logs
+templateCreationPath=/home/configuration_files/Templates
+newtemplateCreationPath=/home/configuration_files/newTemplates
+exportDownloadPath=/home/configuration_files/RequestExport
+importFilePath=/home/configuration_files/Imported/
+responseDownloadPathHealthCheckFolder=/home/configuration_files/HealthCheckReports
+responseDownloadPathVersion=/home/configuration_files/VersionInformation
+configurationFilesXML=/home/configuration_files/configRouters.xml
+VnfConfigCreationPath=/home/configuration_files/Vnf_Configuration_Files
 
-pythonScriptPath=D:\\configuration_files\\pythonScript
-standardConfigPath=D:\\configuration_files\\StandardConfiguration
-comparisonHtmls=D:\\configuration_files\\ComparisonHtmls
-staticXMLVnf=D:\\configuration_files\\combinedFeatures.xml
-snmpDump= D:\\configuration_files\\snmpDump
+pythonScriptPath=/home/configuration_files/pythonScript
+standardConfigPath=/home/configuration_files/StandardConfiguration
+comparisonHtmls=/home/configuration_files/ComparisonHtmls
+staticXMLVnf=/home/configuration_files/combinedFeatures.xml
+snmpDump= /home/configuration_files/snmpDump
 
 
 usernameTelnet=cisco
