--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.suffix: .jsp
 server.port: 8024
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://tool-mysql-35913-development/requestinfo?zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://tool-mysql-35913-development/requestinfo?zeroDateTimeBehavior=convertToNull&autoReconnect=true
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
