--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -2,23 +2,23 @@ webServiceURI=http://localhost:8080
 allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
 saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
-responseDownloadPath=D:\\configuration_files\\Configuration_File
-analyserPath=D:\\configuration_files\\Analyser
-responselogpath=D:\\configuration_files\\logs
-templateCreationPath=D:\\configuration_files\\Templates
-newtemplateCreationPath=D:\\configuration_files\\newTemplates
-exportDownloadPath=D:\\configuration_files\\RequestExport
-importFilePath=D:/configuration_files/Imported/
-responseDownloadPathHealthCheckFolder=D:\\configuration_files\\HealthCheckReports
-responseDownloadPathVersion=D:\\configuration_files\\VersionInformation
-configurationFilesXML=D:\\configuration_files\\configRouters.xml
-VnfConfigCreationPath=D:\\configuration_files\\Vnf_Configuration_Files
+responseDownloadPath=/opt/jboss/configuration_files/Configuration_File
+analyserPath=/opt/jboss/configuration_files/Analyser
+responselogpath=/opt/jboss/configuration_files/logs
+templateCreationPath=/opt/jboss/configuration_files/Templates
+newtemplateCreationPath=/opt/jboss/configuration_files/newTemplates
+exportDownloadPath=/opt/jboss/configuration_files/RequestExport
+importFilePath=/opt/jboss/configuration_files/Imported/
+responseDownloadPathHealthCheckFolder=/opt/jboss/configuration_files/HealthCheckReports
+responseDownloadPathVersion=/opt/jboss/configuration_files/VersionInformation
+configurationFilesXML=/opt/jboss/configuration_files/configRouters.xml
+VnfConfigCreationPath=/opt/jboss/configuration_files/Vnf_Configuration_Files
 
-pythonScriptPath=D:\\configuration_files\\pythonScript
-standardConfigPath=D:\\configuration_files\\StandardConfiguration
-comparisonHtmls=D:\\configuration_files\\ComparisonHtmls
-staticXMLVnf=D:\\configuration_files\\combinedFeatures.xml
-snmpDump= D:\\configuration_files\\snmpDump
+pythonScriptPath=/opt/jboss/configuration_files/pythonScript
+standardConfigPath=/opt/jboss/configuration_files/StandardConfiguration
+comparisonHtmls=/opt/jboss/configuration_files/ComparisonHtmls
+staticXMLVnf=/opt/jboss/configuration_files/combinedFeatures.xml
+snmpDump= /opt/jboss/configuration_files/snmpDump
 
 
 usernameTelnet=cisco
@@ -48,11 +48,5 @@ RegexFilterForFrameLoss=ttcp|loss|,|,1|
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
 
-#serverPath=http://localhost:8080
-serverPath=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
-#serverDBURL=jdbc:mysql://localhost:3306/requestinfo?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-serverDBURL=jdbc:mysql://tool-mysql-35913-development/requestinfo?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-#templateDBURL=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
-templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
 
 
