JSCH Session changes to terminate unwanted C3P Connections to GNS3.
Added ODL urls in TSA Labels and properties files.

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -93,8 +93,8 @@ PORT_SSH=22
 
 USENAME_SQL=root
 PASSWORD_SQL=root
-#DRIVER_CLASS=com.mysql.jdbc.Driver
-#URL_SQL=jdbc:mysql://localhost:3306/RequestInfo?zeroDateTimeBehavior=convertToNull
+DRIVER_CLASS=com.mysql.jdbc.Driver
+#URL_SQL=jdbc:mysql://localhost:3306/requestinfo?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 URL_SQL=jdbc:mysql://tool-mysql-35913-development/requestinfo?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 #URL_TEMPLATE_DB=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
 
@@ -111,3 +111,6 @@ REGEX_FILTER_PRE_THROUGHPUT=ttcp|MByte/sec|=|,1|
 REGEX_FILTER_PRE_FRAMELOSS=ttcp|loss|,|,1|
 SPRING_SERVLET_MUTLIPART_MAX_FILE_SIZE=500KB
 SPRING_SERVLET_MUTLIPART_MAX_REQUEST_SIZE=500KB
+
+ODL_GET_CONFIGURATION_URL=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native
+ODL_PUT_CONFIGURATION_INTERFACE_URL=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface
