--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -1,24 +1,46 @@
-webServiceURI=http://localhost:8080
+#webServiceURI=http://localhost:8080
+#allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
+#getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
+#saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
+#responseDownloadPath=D:\\configuration_files\\Configuration_File
+#analyserPath=D:\\configuration_files\\Analyser
+#responselogpath=D:\\configuration_files\\logs
+#templateCreationPath=D:\\configuration_files\\Templates
+#newtemplateCreationPath=D:\\configuration_files\\newTemplates
+#exportDownloadPath=D:\\configuration_files\\RequestExport
+#importFilePath=D:/configuration_files/Imported/
+#responseDownloadPathHealthCheckFolder=D:\\configuration_files\\HealthCheckReports
+#responseDownloadPathVersion=D:\\configuration_files\\VersionInformation
+#configurationFilesXML=D:\\configuration_files\\configRouters.xml
+#VnfConfigCreationPath=D:\\configuration_files\\Vnf_Configuration_Files
+
+#pythonScriptPath=D:\\configuration_files\\pythonScript
+#standardConfigPath=D:\\configuration_files\\StandardConfiguration
+#comparisonHtmls=D:\\configuration_files\\ComparisonHtmls
+#staticXMLVnf=D:\\configuration_files\\combinedFeatures.xml
+#snmpDump= D:\\configuration_files\\snmpDump
+
+webServiceURI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
 allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
 saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
-responseDownloadPath=D:\\configuration_files\\Configuration_File
-analyserPath=D:\\configuration_files\\Analyser
-responselogpath=D:\\configuration_files\\logs
-templateCreationPath=D:\\configuration_files\\Templates
-newtemplateCreationPath=D:\\configuration_files\\newTemplates
-exportDownloadPath=D:\\configuration_files\\RequestExport
-importFilePath=D:/configuration_files/Imported/
-responseDownloadPathHealthCheckFolder=D:\\configuration_files\\HealthCheckReports
-responseDownloadPathVersion=D:\\configuration_files\\VersionInformation
-configurationFilesXML=D:\\configuration_files\\configRouters.xml
-VnfConfigCreationPath=D:\\configuration_files\\Vnf_Configuration_Files
+responseDownloadPath=/opt/jboss/configuration_files/Configuration_File
+analyserPath=/opt/jboss/configuration_files/Analyser
+responselogpath=/opt/jboss/configuration_files/logs
+templateCreationPath=/opt/jboss/configuration_files/Templates
+newtemplateCreationPath=/opt/jboss/configuration_files/newTemplates
+exportDownloadPath=/opt/jboss/configuration_files/RequestExport
+importFilePath=/opt/jboss/configuration_files/Imported/
+responseDownloadPathHealthCheckFolder=/opt/jboss/configuration_files/HealthCheckReports
+responseDownloadPathVersion=/opt/jboss/configuration_files/VersionInformation
+configurationFilesXML=/opt/jboss/configuration_files/configRouters.xml
+VnfConfigCreationPath=/opt/jboss/configuration_files/Vnf_Configuration_Files
 
-pythonScriptPath=D:\\configuration_files\\pythonScript
-standardConfigPath=D:\\configuration_files\\StandardConfiguration
-comparisonHtmls=D:\\configuration_files\\ComparisonHtmls
-staticXMLVnf=D:\\configuration_files\\combinedFeatures.xml
-snmpDump= D:\\configuration_files\\snmpDump
+pythonScriptPath=/opt/jboss/configuration_files/pythonScript
+standardConfigPath=/opt/jboss/configuration_files/StandardConfiguration
+comparisonHtmls=/opt/jboss/configuration_files/ComparisonHtmls
+staticXMLVnf=/opt/jboss/configuration_files/combinedFeatures.xml
+snmpDump=/opt/jboss/configuration_files/snmpDump
 
 
 usernameTelnet=cisco
@@ -60,27 +82,50 @@ templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReco
 
 ### New way of reading properties files values as an enum from the application.  ###
 ### Once after migrating the TSA.properties file related stuff. We needs to delete the lines from 1 to 50.###
-WEB_SERVICE_URI=http://localhost:8080
+#WEB_SERVICE_URI=http://localhost:8080
+#ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
+#GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
+#SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
+#RESPONSE_DOWNLOAD_PATH=D:\\configuration_files\\Configuration_File
+#ANALYSER_PATH=D:\\configuration_files\\Analyser
+#RESPONSE_LOG_PATH=D://configuration_files//logs
+#TEMPLATE_CREATION_PATH=D:\\configuration_files\\Templates
+#NEW_TEMPLATE_CREATION_PATH=D:\\configuration_files\\newTemplates
+#EXPORT_DOWNLOAD_PATH=D:\\configuration_files\\RequestExport
+#IMPORT_FILEPATH=D:/configuration_files/Imported/
+#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=D:\\configuration_files\\HealthCheckReports
+#RESP_DOWNLOAD_VERSION_PATH=D:\\configuration_files\\VersionInformation
+#CONFIGURATION_FILES_XML=D:\\configuration_files\\configRouters.xml
+#VNF_CONFIG_CREATION_PATH=D:\\configuration_files\\Vnf_Configuration_Files
+
+#PYTHON_SCRIPT_PATH=D:\\configuration_files\\pythonScript
+#STANDARD_CONFIG_PATH=D:\\configuration_files\\StandardConfiguration
+#COMPARISON_HTMLS=D:\\configuration_files\\ComparisonHtmls
+#STATIC_XML_VNF=D:\\configuration_files\\combinedFeatures.xml
+#SNMP_DUMP= D:\\configuration_files\\snmpDump
+
+
+WEB_SERVICE_URI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
 ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
 SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
-RESPONSE_DOWNLOAD_PATH=D:\\configuration_files\\Configuration_File
-ANALYSER_PATH=D:\\configuration_files\\Analyser
-RESPONSE_LOG_PATH=D://configuration_files//logs
-TEMPLATE_CREATION_PATH=D:\\configuration_files\\Templates
-NEW_TEMPLATE_CREATION_PATH=D:\\configuration_files\\newTemplates
-EXPORT_DOWNLOAD_PATH=D:\\configuration_files\\RequestExport
-IMPORT_FILEPATH=D:/configuration_files/Imported/
-RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=D:\\configuration_files\\HealthCheckReports
-RESP_DOWNLOAD_VERSION_PATH=D:\\configuration_files\\VersionInformation
-CONFIGURATION_FILES_XML=D:\\configuration_files\\configRouters.xml
-VNF_CONFIG_CREATION_PATH=D:\\configuration_files\\Vnf_Configuration_Files
+RESPONSE_DOWNLOAD_PATH=/opt/jboss/configuration_files/Configuration_File
+ANALYSER_PATH=/opt/jboss/configuration_files/Analyser
+RESPONSE_LOG_PATH=/opt/jboss/configuration_files/logs
+TEMPLATE_CREATION_PATH=/opt/jboss/configuration_files/Templates
+NEW_TEMPLATE_CREATION_PATH=/opt/jboss/configuration_files/newTemplates
+EXPORT_DOWNLOAD_PATH=/opt/jboss/configuration_files/RequestExport
+IMPORT_FILEPATH=/opt/jboss/configuration_files/Imported/
+RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/jboss/configuration_files/HealthCheckReports
+RESP_DOWNLOAD_VERSION_PATH=/opt/jboss/configuration_files/VersionInformation
+CONFIGURATION_FILES_XML=/opt/jboss/configuration_files/configRouters.xml
+VNF_CONFIG_CREATION_PATH=/opt/jboss/configuration_files/Vnf_Configuration_Files
 
-PYTHON_SCRIPT_PATH=D:\\configuration_files\\pythonScript
-STANDARD_CONFIG_PATH=D:\\configuration_files\\StandardConfiguration
-COMPARISON_HTMLS=D:\\configuration_files\\ComparisonHtmls
-STATIC_XML_VNF=D:\\configuration_files\\combinedFeatures.xml
-SNMP_DUMP= D:\\configuration_files\\snmpDump
+PYTHON_SCRIPT_PATH=/opt/jboss/configuration_files/pythonScript
+STANDARD_CONFIG_PATH=/opt/jboss/configuration_files/StandardConfiguration
+COMPARISON_HTMLS=/opt/jboss/configuration_files/ComparisonHtmls
+STATIC_XML_VNF=/opt/jboss/configuration_files/combinedFeatures.xml
+SNMP_DUMP= /opt/jboss/configuration_files/snmpDump
 
 USERNAME_TELNET=cisco
 PASSWORD_TELNET=cisco
