New VNF Test URLs added

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -159,3 +159,8 @@ SPRING_SERVLET_MUTLIPART_MAX_REQUEST_SIZE=500KB
 
 ODL_GET_CONFIGURATION_URL=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native
 ODL_PUT_CONFIGURATION_INTERFACE_URL=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface
+
+ODL_TEST_INTERFACE_MTU=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface/GigabitEthernet/1/MTU
+ODL_TEST_ALL_INTERFACE_LIST=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface
+ODL_TEST_INTERFACE_ENCAPSULATION=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface/GigabitEthernet/1/Encapsulation
+ODL_TEST_INTERFACE_BANDWIDTH=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface/GigabitEthernet/1/Bandwidth
