Patches for test VNF

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -164,3 +164,7 @@ ODL_TEST_INTERFACE_MTU=http://10.62.0.119:8181/restconf/config/network-topology:
 ODL_TEST_ALL_INTERFACE_LIST=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface
 ODL_TEST_INTERFACE_ENCAPSULATION=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface/GigabitEthernet/1/Encapsulation
 ODL_TEST_INTERFACE_BANDWIDTH=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface/GigabitEthernet/1/Bandwidth
+
+
+ODL_TEST_NEGOTIATION_TEST=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface/GigabitEthernet/1/negotiation
+ODL_TEST_BANDWIDTH_TEST=http://10.62.0.119:8181/restconf/config/network-topology:network-topology/topology/topology-netconf/node/CSR1000v/yang-ext:mount/ned:native/interface/GigabitEthernet/1/bandwidth
