Ruchita Salvi: 1. Bulk processing changes for parallel processing 2. Device inventory enable icon changes 3. Changes in DB schema name

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -43,6 +43,30 @@ staticXMLVnf=/opt/jboss/configuration_files/combinedFeatures.xml
 snmpDump=/opt/jboss/configuration_files/snmpDump
 
 
+
+#webServiceURI=http://localhost:8080
+#allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
+#getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
+#saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
+#responseDownloadPath=/opt/camunda/server/wildfly-19.0.0.Final/standalone/Configuration_File
+#analyserPath=/opt/camunda/server/wildfly-19.0.0.Final/standalone/Analyser
+#responselogpath=/opt/camunda/server/wildfly-19.0.0.Final/standalone/logs
+#templateCreationPath=/opt/camunda/server/wildfly-19.0.0.Final/standalone/Templates
+#newtemplateCreationPath=/opt/camunda/server/wildfly-19.0.0.Final/standalone/newTemplates
+#exportDownloadPath=/opt/camunda/server/wildfly-19.0.0.Final/standalone/RequestExport
+#importFilePath=/opt/camunda/server/wildfly-19.0.0.Final/standalone/
+#responseDownloadPathHealthCheckFolder=/opt/camunda/server/wildfly-19.0.0.Final/standalone/HealthCheckReports
+#responseDownloadPathVersion=/opt/camunda/server/wildfly-19.0.0.Final/standalone/VersionInformation
+#configurationFilesXML=/opt/camunda/server/wildfly-19.0.0.Final/standalone/configRouters.xml
+#VnfConfigCreationPath=/opt/camunda/server/wildfly-19.0.0.Final/standalone/Vnf_Configuration_Files
+
+#pythonScriptPath=/opt/camunda/server/wildfly-19.0.0.Final/standalone/pythonScript
+#standardConfigPath=/opt/camunda/server/wildfly-19.0.0.Final/standalone/StandardConfiguration
+#comparisonHtmls=/opt/camunda/server/wildfly-19.0.0.Final/standalone/ComparisonHtmls
+#staticXMLVnf=/opt/camunda/server/wildfly-19.0.0.Final/standalone/combinedFeatures.xml
+#snmpDump= /opt/camunda/server/wildfly-19.0.0.Final/standalone/snmpDump
+
+
 usernameTelnet=cisco
 passwordTelnet=cisco
 portTelnet=23
@@ -72,8 +96,8 @@ spring.servlet.multipart.max-request-size=500KB
 
 #serverPath=http://localhost:8080
 serverPath=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
-#serverDBURL=jdbc:mysql://localhost:3306/requestinfo?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-serverDBURL=jdbc:mysql://tool-mysql-35913-development/requestinfo?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+#serverDBURL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+serverDBURL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 #templateDBURL=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
 templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
 
@@ -127,6 +151,29 @@ COMPARISON_HTMLS=/opt/jboss/configuration_files/ComparisonHtmls
 STATIC_XML_VNF=/opt/jboss/configuration_files/combinedFeatures.xml
 SNMP_DUMP= /opt/jboss/configuration_files/snmpDump
 
+#WEB_SERVICE_URI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
+#ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
+#GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
+#SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
+#RESPONSE_DOWNLOAD_PATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/Configuration_File
+#ANALYSER_PATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/Analyser
+#RESPONSE_LOG_PATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/logs
+#TEMPLATE_CREATION_PATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/Templates
+#NEW_TEMPLATE_CREATION_PATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/newTemplates
+#EXPORT_DOWNLOAD_PATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/RequestExport
+#IMPORT_FILEPATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/Imported/
+#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/HealthCheckReports
+#RESP_DOWNLOAD_VERSION_PATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/VersionInformation
+#CONFIGURATION_FILES_XML=/opt/camunda/server/wildfly-19.0.0.Final/standalone/configRouters.xml
+#VNF_CONFIG_CREATION_PATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/Vnf_Configuration_Files
+
+#PYTHON_SCRIPT_PATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/pythonScript
+#STANDARD_CONFIG_PATH=/opt/camunda/server/wildfly-19.0.0.Final/standalone/StandardConfiguration
+#COMPARISON_HTMLS=/opt/camunda/server/wildfly-19.0.0.Final/standalone/ComparisonHtmls
+#STATIC_XML_VNF=/opt/camunda/server/wildfly-19.0.0.Final/standalone/combinedFeatures.xml
+#SNMP_DUMP= /opt/camunda/server/wildfly-19.0.0.Final/standalone/snmpDump
+
+
 USERNAME_TELNET=cisco
 PASSWORD_TELNET=cisco
 PORT_TELNET=23
@@ -139,9 +186,9 @@ PORT_SSH=22
 USENAME_SQL=root
 PASSWORD_SQL=root
 DRIVER_CLASS=com.mysql.jdbc.Driver
-#URL_SQL=jdbc:mysql://localhost:3306/requestinfo?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-URL_SQL=jdbc:mysql://tool-mysql-35913-development/requestinfo?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-#URL_TEMPLATE_DB=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
+#URL_SQL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+URL_SQL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+URL_TEMPLATE_DB=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
 
 NETWORK_TEST_COMMAND=5
 NT1=terminal length 0
