--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.mvc.view.suffix: .jsp
 server.port: 8024
 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull
-spring.datasource.url=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull
+#spring.datasource.url=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root@1234
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
