Ping utility Changes

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -152,6 +152,8 @@ NT3=show interface Serial 1/0
 NT4=show version
 NT5=sh ip bgp summary
 FILE_CHUNK_SIZE=40
+#APP_OS=Windows
+APP_OS=Linux
 
 REGEX_FILTER_PRE_VALIDATION=Show Version|RELEASE SOFTWARE|,|0,1,2|0,0,1|,,3
 REGEX_FILTER_PRE_THROUGHPUT=ttcp|MByte/sec|=|,1|
