Updated properties & Ping utlity

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -20,10 +20,10 @@
 #staticXMLVnf=D:\\configuration_files\\combinedFeatures.xml
 #snmpDump= D:\\configuration_files\\snmpDump\\
 
-#webServiceURI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
+webServiceURI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
 
 ## Megham Configuration #######
-webServiceURI=http://localhost:8080
+#webServiceURI=http://localhost:8080
 allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
 saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
@@ -74,11 +74,11 @@ spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
 
 serverPath=http://localhost:8080
-#serverPath=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
-serverDBURL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+serverPath=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
+#serverDBURL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 #serverDBURL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-templateDBURL=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
-#templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
+#templateDBURL=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
+templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
 
 
 
@@ -106,8 +106,8 @@ templateDBURL=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=c
 #STATIC_XML_VNF=D:\\configuration_files\\combinedFeatures.xml
 #SNMP_DUMP= D:\\configuration_files\\snmpDump
 
-#WEB_SERVICE_URI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
-WEB_SERVICE_URI=http://localhost:8080
+WEB_SERVICE_URI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
+#WEB_SERVICE_URI=http://localhost:8080
 ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
 SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
@@ -139,11 +139,13 @@ PASSWORD_SSH=cisco
 PORT_SSH=22
 
 USENAME_SQL=root
-PASSWORD_SQL=root@1234
+PASSWORD_SQL=root
+#PASSWORD_SQL=root@1234
 DRIVER_CLASS=com.mysql.jdbc.Driver
-URL_SQL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-#URL_SQL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-URL_TEMPLATE_DB=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
+#URL_SQL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+URL_SQL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+URL_TEMPLATE_DB=jdbc:mysql://tool-mysql-35913-development/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
+#URL_TEMPLATE_DB=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
 
 NETWORK_TEST_COMMAND=5
 NT1=terminal length 0
