Updated NAD Properties

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -2,23 +2,23 @@
 #allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 #getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
 #saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
-#responseDownloadPath=D:\\configuration_files\\Configuration_File\\
-#analyserPath=D:\\configuration_files\\Analyser
-#responselogpath=D:\\configuration_files\\logs
-#templateCreationPath=D:\\configuration_files\\Templates\\
-#newtemplateCreationPath=D:\\configuration_files\\NewTemplates\\
-#exportDownloadPath=D:\\configuration_files\\RequestExport
-#importFilePath=D:/configuration_files/Imported/
-#responseDownloadPathHealthCheckFolder=D:\\configuration_files\\HealthCheckReports
-#responseDownloadPathVersion=D:\\configuration_files\\VersionInformation
-#configurationFilesXML=D:\\configuration_files\\configRouters.xml
-#VnfConfigCreationPath=D:\\configuration_files\\Vnf_Configuration_Files
+#responseDownloadPath=D:\\C3PConfig\\ConfigurationFiles\\
+#analyserPath=D:\\C3PConfig\\Analyser
+#responselogpath=D:\\C3PConfig\\Logs
+#templateCreationPath=D:\\C3PConfig\\Templates\\
+#newtemplateCreationPath=D:\\C3PConfig\\NewTemplates\\
+#exportDownloadPath=D:\\C3PConfig\\RequestExport
+#importFilePath=D:\\C3PConfig\\ImportedFiles\\
+#responseDownloadPathHealthCheckFolder=D:\\C3PConfig\\HealthCheckReports
+#responseDownloadPathVersion=D:\\C3PConfig\\VersionInformation
+#configurationFilesXML=D:\\C3PConfig\\configRouters.xml
+#VnfConfigCreationPath=D:\\C3PConfig\\VnfConfigurationFiles
 
-#pythonScriptPath=D:\\configuration_files\\pythonScript\\
-#standardConfigPath=D:\\configuration_files\\StandardConfiguration\\
-#comparisonHtmls=D:\\configuration_files\\ComparisonHtmls\\
-#staticXMLVnf=D:\\configuration_files\\combinedFeatures.xml
-#snmpDump= D:\\configuration_files\\snmpDump\\
+#pythonScriptPath=D:\\C3PConfig\\PythonScript\\
+#standardConfigPath=D:\\C3PConfig\\StandardConfiguration\\
+#comparisonHtmls=D:\\C3PConfig\\ComparisonHtmls\\
+#staticXMLVnf=D:\\C3PConfig\\combinedFeatures.xml
+#snmpDump= D:\\C3PConfig\\SnmpDump\\
 
 webServiceURI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
 
@@ -73,10 +73,10 @@ RegexFilterForFrameLoss=ttcp|loss|,|,1|
 spring.servlet.multipart.max-file-size=500KB
 spring.servlet.multipart.max-request-size=500KB
 
-serverPath=http://localhost:8080
+#serverPath=http://localhost:8080
 serverPath=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
 #serverDBURL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
-#serverDBURL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
+serverDBURL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 #templateDBURL=jdbc:mysql://localhost:3306/template_schema?zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
 templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true&autoReconnect=true
 
@@ -88,23 +88,23 @@ templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReco
 #ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 #GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
 #SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
-#RESPONSE_DOWNLOAD_PATH=D:\\configuration_files\\Configuration_File
-#ANALYSER_PATH=D:\\configuration_files\\Analyser
-#RESPONSE_LOG_PATH=D://configuration_files//logs
-#TEMPLATE_CREATION_PATH=D:\\configuration_files\\Templates
-#NEW_TEMPLATE_CREATION_PATH=D:\\configuration_files\\NewTemplates
-#EXPORT_DOWNLOAD_PATH=D:\\configuration_files\\RequestExport
-#IMPORT_FILEPATH=D:/configuration_files/Imported/
-#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=D:\\configuration_files\\HealthCheckReports
-#RESP_DOWNLOAD_VERSION_PATH=D:\\configuration_files\\VersionInformation
-#CONFIGURATION_FILES_XML=D:\\configuration_files\\configRouters.xml
-#VNF_CONFIG_CREATION_PATH=D:\\configuration_files\\Vnf_Configuration_Files
+#RESPONSE_DOWNLOAD_PATH=D:\\C3PConfig\\ConfigurationFiles\\
+#ANALYSER_PATH=D:\\C3PConfig\\Analyser
+#RESPONSE_LOG_PATH=D:\\C3PConfig\\Logs
+#TEMPLATE_CREATION_PATH=D:\\C3PConfig\\Templates\\
+#NEW_TEMPLATE_CREATION_PATH=D:\\C3PConfig\\NewTemplates\\
+#EXPORT_DOWNLOAD_PATH=D:\\C3PConfig\\RequestExport
+#IMPORT_FILEPATH=D:\\C3PConfig\\ImportedFiles\\
+#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=D:\\C3PConfig\\HealthCheckReports
+#RESP_DOWNLOAD_VERSION_PATH=D:\\C3PConfig\\VersionInformation
+#CONFIGURATION_FILES_XML=D:\\C3PConfig\\configRouters.xml
+#VNF_CONFIG_CREATION_PATH=D:\\C3PConfig\\VnfConfigurationFiles
 
-#PYTHON_SCRIPT_PATH=D:\\configuration_files\\pythonScript
-#STANDARD_CONFIG_PATH=D:\\configuration_files\\StandardConfiguration
-#COMPARISON_HTMLS=D:\\configuration_files\\ComparisonHtmls
-#STATIC_XML_VNF=D:\\configuration_files\\combinedFeatures.xml
-#SNMP_DUMP= D:\\configuration_files\\snmpDump
+#PYTHON_SCRIPT_PATH=D:\\C3PConfig\\PythonScript\\
+#STANDARD_CONFIG_PATH=D:\\C3PConfig\\StandardConfiguration\\
+#COMPARISON_HTMLS=D:\\C3PConfig\\ComparisonHtmls\\
+#STATIC_XML_VNF=D:\\C3PConfig\\combinedFeatures.xml
+#SNMP_DUMP= D:\\C3PConfig\\SnmpDump\\
 
 WEB_SERVICE_URI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
 #WEB_SERVICE_URI=http://localhost:8080
@@ -139,8 +139,8 @@ PASSWORD_SSH=cisco
 PORT_SSH=22
 
 USENAME_SQL=root
-PASSWORD_SQL=root
 #PASSWORD_SQL=root@1234
+PASSWORD_SQL=root
 DRIVER_CLASS=com.mysql.jdbc.Driver
 #URL_SQL=jdbc:mysql://localhost:3306/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
 URL_SQL=jdbc:mysql://tool-mysql-35913-development/c3pdbschema?autoReconnect=true&zeroDateTimeBehavior=convertToNull&rewriteBatchedStatements=true
