Added NAD properties

--- a/src/main/resources/TSA.properties
+++ b/src/main/resources/TSA.properties
@@ -20,30 +20,51 @@
 #staticXMLVnf=D:\\C3PConfig\\combinedFeatures.xml
 #snmpDump= D:\\C3PConfig\\SnmpDump\\
 
+## NAD Configuration #######
 webServiceURI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
-
-## Megham Configuration #######
-#webServiceURI=http://localhost:8080
 allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
 saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
-responseDownloadPath=/opt/C3PConfig/ConfigurationFiles/
-analyserPath=/opt/C3PConfig/Analyser
-responselogpath=/opt/C3PConfig/Logs
-templateCreationPath=/opt/C3PConfig/Templates/
-newtemplateCreationPath=/opt/C3PConfig/NewTemplates/
-exportDownloadPath=/opt/C3PConfig/RequestExport
-importFilePath=/opt/C3PConfig/ImportedFiles/
-responseDownloadPathHealthCheckFolder=/opt/C3PConfig/HealthCheckReports
-responseDownloadPathVersion=/opt/C3PConfig/VersionInformation
-configurationFilesXML=/opt/C3PConfig/configRouters.xml
-VnfConfigCreationPath=/opt/C3PConfig/VnfConfigurationFiles
+responseDownloadPath=/opt/jboss/C3PConfig/ConfigurationFiles/
+analyserPath=/opt/jboss/C3PConfig/Analyser
+responselogpath=/opt/jboss/C3PConfig/Logs
+templateCreationPath=/opt/jboss/C3PConfig/Templates/
+newtemplateCreationPath=/opt/jboss/C3PConfig/NewTemplates/
+exportDownloadPath=/opt/jboss/C3PConfig/RequestExport
+importFilePath=/opt/jboss/C3PConfig/ImportedFiles/
+responseDownloadPathHealthCheckFolder=/opt/jboss/C3PConfig/HealthCheckReports
+responseDownloadPathVersion=/opt/jboss/C3PConfig/VersionInformation
+configurationFilesXML=/opt/jboss/C3PConfig/configRouters.xml
+VnfConfigCreationPath=/opt/jboss/C3PConfig/VnfConfigurationFiles
 
-pythonScriptPath=/opt/C3PConfig/PythonScript/
-standardConfigPath=/opt/C3PConfig/StandardConfiguration/
-comparisonHtmls=/opt/C3PConfig/ComparisonHtmls/
-staticXMLVnf=/opt/C3PConfig/combinedFeatures.xml
-snmpDump=/opt/C3PConfig/SnmpDump/
+pythonScriptPath=/opt/jboss/C3PConfig/PythonScript/
+standardConfigPath=/opt/jboss/C3PConfig/StandardConfiguration/
+comparisonHtmls=/opt/jboss/C3PConfig/ComparisonHtmls/
+staticXMLVnf=/opt/jboss/C3PConfig/combinedFeatures.xml
+snmpDump=/opt/jboss/C3PConfig/SnmpDump/
+
+## Megham Configuration #######
+#webServiceURI=http://localhost:8080
+#allRequestDetailsPath=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
+#getResponsesPath=/POC1/rest/CreateConfigurationService/getResponse/
+#saveRequestDetailsPath=/POC1/rest/CreateConfigurationService/createConfiguration/
+#responseDownloadPath=/opt/C3PConfig/ConfigurationFiles/
+#analyserPath=/opt/C3PConfig/Analyser
+#responselogpath=/opt/C3PConfig/Logs
+#templateCreationPath=/opt/C3PConfig/Templates/
+#newtemplateCreationPath=/opt/C3PConfig/NewTemplates/
+#exportDownloadPath=/opt/C3PConfig/RequestExport
+#importFilePath=/opt/C3PConfig/ImportedFiles/
+#responseDownloadPathHealthCheckFolder=/opt/C3PConfig/HealthCheckReports
+#responseDownloadPathVersion=/opt/C3PConfig/VersionInformation
+#configurationFilesXML=/opt/C3PConfig/configRouters.xml
+#VnfConfigCreationPath=/opt/C3PConfig/VnfConfigurationFiles
+
+#pythonScriptPath=/opt/C3PConfig/PythonScript/
+#standardConfigPath=/opt/C3PConfig/StandardConfiguration/
+#comparisonHtmls=/opt/C3PConfig/ComparisonHtmls/
+#staticXMLVnf=/opt/C3PConfig/combinedFeatures.xml
+#snmpDump=/opt/C3PConfig/SnmpDump/
 
 
 usernameTelnet=cisco
@@ -106,28 +127,51 @@ templateDBURL=jdbc:mysql://tool-mysql-35913-development/template_schema?autoReco
 #STATIC_XML_VNF=D:\\C3PConfig\\combinedFeatures.xml
 #SNMP_DUMP= D:\\C3PConfig\\SnmpDump\\
 
+## NAD Configuration #######
 WEB_SERVICE_URI=https://ms-shared-nad.techmahindra.com/000000000035913-platfrm-ip-c3p-camunda-development
-#WEB_SERVICE_URI=http://localhost:8080
 ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
 GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
 SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
-RESPONSE_DOWNLOAD_PATH=/opt/C3PConfig/ConfigurationFiles/
-ANALYSER_PATH=/opt/C3PConfig/Analyser
-RESPONSE_LOG_PATH=/opt/C3PConfig/Logs
-TEMPLATE_CREATION_PATH=/opt/C3PConfig/Templates/
-NEW_TEMPLATE_CREATION_PATH=/opt/C3PConfig/NewTemplates/
-EXPORT_DOWNLOAD_PATH=/opt/C3PConfig/RequestExport
-IMPORT_FILEPATH=/opt/C3PConfig/ImportedFiles/
-RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/C3PConfig/HealthCheckReports
-RESP_DOWNLOAD_VERSION_PATH=/opt/C3PConfig/VersionInformation
-CONFIGURATION_FILES_XML=/opt/C3PConfig/configRouters.xml
-VNF_CONFIG_CREATION_PATH=/opt/C3PConfig/VnfConfigurationFiles
+RESPONSE_DOWNLOAD_PATH=/opt/jboss/C3PConfig/ConfigurationFiles/
+ANALYSER_PATH=/opt/jboss/C3PConfig/Analyser
+RESPONSE_LOG_PATH=/opt/jboss/C3PConfig/Logs
+TEMPLATE_CREATION_PATH=/opt/jboss/C3PConfig/Templates/
+NEW_TEMPLATE_CREATION_PATH=/opt/jboss/C3PConfig/NewTemplates/
+EXPORT_DOWNLOAD_PATH=/opt/jboss/C3PConfig/RequestExport
+IMPORT_FILEPATH=/opt/jboss/C3PConfig/ImportedFiles/
+RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/jboss/C3PConfig/HealthCheckReports
+RESP_DOWNLOAD_VERSION_PATH=/opt/jboss/C3PConfig/VersionInformation
+CONFIGURATION_FILES_XML=/opt/jboss/C3PConfig/configRouters.xml
+VNF_CONFIG_CREATION_PATH=/opt/jboss/C3PConfig/VnfConfigurationFiles
 
-PYTHON_SCRIPT_PATH=/opt/C3PConfig/PythonScript/
-STANDARD_CONFIG_PATH=/opt/C3PConfig/StandardConfiguration/
-COMPARISON_HTMLS=/opt/C3PConfig/ComparisonHtmls/
-STATIC_XML_VNF=/opt/C3PConfig/combinedFeatures.xml
-SNMP_DUMP=/opt/C3PConfig/SnmpDump/
+PYTHON_SCRIPT_PATH=/opt/jboss/C3PConfig/PythonScript/
+STANDARD_CONFIG_PATH=/opt/jboss/C3PConfig/StandardConfiguration/
+COMPARISON_HTMLS=/opt/jboss/C3PConfig/ComparisonHtmls/
+STATIC_XML_VNF=/opt/jboss/C3PConfig/combinedFeatures.xml
+SNMP_DUMP=/opt/jboss/C3PConfig/SnmpDump/
+
+## Megham Configuration #######
+#WEB_SERVICE_URI=http://localhost:8080
+#ALL_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/getAllRequestsDetail
+#GET_RESPONSES_PATH=/POC1/rest/CreateConfigurationService/getResponse/
+#SAVE_REQUEST_DETAILS_PATH=/POC1/rest/CreateConfigurationService/createConfiguration/
+#RESPONSE_DOWNLOAD_PATH=/opt/C3PConfig/ConfigurationFiles/
+#ANALYSER_PATH=/opt/C3PConfig/Analyser
+#RESPONSE_LOG_PATH=/opt/C3PConfig/Logs
+#TEMPLATE_CREATION_PATH=/opt/C3PConfig/Templates/
+#NEW_TEMPLATE_CREATION_PATH=/opt/C3PConfig/NewTemplates/
+#EXPORT_DOWNLOAD_PATH=/opt/C3PConfig/RequestExport
+#IMPORT_FILEPATH=/opt/C3PConfig/ImportedFiles/
+#RESP_DOWNLOAD_HEALTH_CHECK_REPORTS_PATH=/opt/C3PConfig/HealthCheckReports
+#RESP_DOWNLOAD_VERSION_PATH=/opt/C3PConfig/VersionInformation
+#CONFIGURATION_FILES_XML=/opt/C3PConfig/configRouters.xml
+#VNF_CONFIG_CREATION_PATH=/opt/C3PConfig/VnfConfigurationFiles
+
+#PYTHON_SCRIPT_PATH=/opt/C3PConfig/PythonScript/
+#STANDARD_CONFIG_PATH=/opt/C3PConfig/StandardConfiguration/
+#COMPARISON_HTMLS=/opt/C3PConfig/ComparisonHtmls/
+#STATIC_XML_VNF=/opt/C3PConfig/combinedFeatures.xml
+#SNMP_DUMP=/opt/C3PConfig/SnmpDump/
 
 USERNAME_TELNET=cisco
 PASSWORD_TELNET=cisco
